Fix left margin for portfolio items on small screens

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -186,12 +186,14 @@ footer {
 				margin-left: 10px;
 			}
 		}
+		.project {
+			margin-left: 10px;
+		}
 		.thumbnail img {
 			height: auto;
 		}
 		.description {
 			position: initial;
-			margin-left: 10px;
 		}
 	}
 	.inline-list {
